--- a/shaun-lab31/frontend/package.json
+++ b/shaun-lab31/frontend/package.json
@@ -33,5 +33,8 @@
     "uuid": "^3.1.0",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
+  },
+  "dependencies": {
+    "superagent": "^3.6.3"
   }
 }
