adds working children def, but id still not being assinged correctly

--- a/shaun-lab31/frontend/.eslintrc.json
+++ b/shaun-lab31/frontend/.eslintrc.json
@@ -23,7 +23,7 @@
     "browser": true
   },
   "globals": {
-    "__API_URI__": false,
+    "__API_URI__": true,
     "__TITLE__": false,
     "__DEBUG__": false
   },
